@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-09T08:10:04Z",
-  "count_outdated" : 613,
-  "uniques_outdated" : 39,
-  "count" : 937,
-  "uniques" : 54,
+  "timestamp" : "2022-04-09T16:09:02Z",
+  "count_outdated" : 657,
+  "uniques_outdated" : 40,
+  "count" : 959,
+  "uniques" : 55,
   "views" : [
-    {
-      "timestamp": "2022-03-26T00:00:00Z",
-      "count": 23,
-      "count_minmax": [ 0, 44 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-03-27T00:00:00Z",
       "count": 16,
@@ -100,6 +93,13 @@
       "timestamp": "2022-04-08T00:00:00Z",
       "count": 27,
       "count_minmax": [ 0, 27 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-04-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
