@@ -1,12 +1,7 @@
 {
-  "count": 324,
+  "count": 302,
   "uniques": 2,
   "views": [
-    {
-      "timestamp": "2022-03-26T00:00:00Z",
-      "count": 23,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-03-27T00:00:00Z",
       "count": 16,
@@ -70,6 +65,11 @@
     {
       "timestamp": "2022-04-08T00:00:00Z",
       "count": 27,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-09T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
