@@ -1,3 +1,9 @@
+2022-04-09T16:09:02Z:
+* notice: last 14d: all unq: 302 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 613 39 / 937 54
+* notice: next accum: outdated-all outdated-unq / all unq: 657 40 / 959 55
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +11 / -0 -21
+
 2022-04-09T08:10:04Z:
 * notice: last 14d: all unq: 324 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 613 39 / 958 54
